# zgranx

./: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum  qs.sql  set-env
api/: base.proto  exa.proto  ma.proto  monitor.proto  rsi.proto
cmd/bots/mrb/: README.md
cmd/dit/: main.go
cmd/exa/etc/: main.go
cmd/exa/huobi/: main.go
cmd/exaftx/: main.go
cmd/exaftx/client/: main.go
cmd/exaftx/server/: main.go
cmd/exakkn/client/: main.go
cmd/exakkn/server/: main.go
cmd/ma/: main.go
cmd/test/etc/: main.go
cmd/test/ma/: main.go
data/: Bitstamp_BTCUSD_1h.sql  Bitstamp_ETHUSD_1h.sql
deployments/pdb/: 01-schema.sql
deployments/sdb/: 01-schema.sql
docs/: gate_io-spot-currencies.json  huobi-symbols.json  okx-instruments.json
internal/cg/ohlc/: json_test.go
internal/cg/prices/: db.go  json.go  json_test.go
internal/huobi/: account.go  account_test.go  balance.go  balance_test.go  order.go  order_test.go  utils.go  utils_test.go
internal/ma/: ema.go  ema_test.go  sma.go  sma_test.go
internal/ohlc/: db.go  json.go  json_test.go
internal/ohlc/test_data/binance/: BTCUSDT.ohlc
internal/ohlc/test_data/ftx/: BTC-USD.ohlc
internal/ohlc/test_data/gateio/: BTC_USD.json
internal/ohlc/test_data/huobi/: btcusdt.ohlc
internal/ohlc/test_data/ohlc/b/: ethereum_usd.ohlc
rsi_service/: Cargo.toml  build.rs
rsi_service/src/: lib.rs  monitor.rs  protos.rs  server.rs
scripts/: dl-T-801  ftx-5min-ohlc  gio-5min-ohlc  huobi-5min-ohlc  push-ohlc-to-db  push-prices-to-db
utils/: Cargo.toml  build.rs
utils/src/: lib.rs  protos.rs
(+17 files in other folders)
