[package]
name = "rsi_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"
rust_decimal_macros = "1.25"
rust_decimal = { version = "1.25", features = ["maths"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.7"
#protoc-rust = "2"
