[package]
name = "rsi_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tonic = "0.7"
rust_decimal = { version = "1.25", features = ["maths"] }
rust_decimal_macros = "1.25"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
